View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026035 | Open CASCADE | OCCT:DRAW | public | 2015-04-09 11:40 | 2015-05-14 16:35 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026035: Length dimension can't be built between two vertices in Draw | ||||
Description | In Draw length dimension can't be built between two vertices if they were created with the command "vertex". If create two points with command "vpoint" with the same coordinates then dimension is drawn correctly. | ||||
Steps To Reproduce | bugs vis bug26035_1 bugs vis bug26035_2 bugs vis bug26035_3 bugs vis bug26035_4 bugs vis bug26035_5 bugs vis bug26035_6 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug26035_1, bug26035_2, bug26035_3, bug26035_4, bug26035_5, bug26035_6 | ||||
|
Branch CR26035 has been created by dbv. SHA-1: 0f7b58e58ce658efcafefe73af529aee85abf4b1 Detailed log of new commits: Author: dbv Date: Thu Apr 9 11:03:41 2015 +0300 Fixed drawing length dimension between two vertices in Draw. |
|
Dear Andrey, please review patch in occt branch CR26035 |
|
+ TopoDS_Vertex aVertex1 = TopoDS::Vertex ((Handle(AIS_Shape)::DownCast(aShapes.First ()))->Shape()); this will raise exception if not TopoDS_Vertex will be passed. Please add ShapeType() check to the command. |
|
Branch CR26035 has been updated forcibly by dbv. SHA-1: 46ee384de06ac8aea00019ab7cae0b66c05a78dc |
|
Dear Kirill, please review update for the patch in branch CR26035 |
|
The patch breaks the following test case:pload MODELING VISUALIZATION box b 100 200 300 vinit View1 vclear vaxo explode b F vdisplay b_1 b_2 vdimension len -length -shapes b_1 b_2 -plane zox vfit |
|
Dear dbv, please consider, that length dimension can be built on two shapes of different kinds (not only on vertices, but also edges and faces) according to AIS_LengthDimension interface. |
|
Branch CR26035 has been updated forcibly by dbv. SHA-1: e99a51b0e9a7c79d94e8960caf4c903ae5400988 |
|
Fixed drawing length dimension for two vertices in Draw Fixed exception when trying to draw length dimension for face-point or point-face Fixed drawing length dimension for edge-vertex/point and vertex/point-edge Btw, why there is no ability in AIS_LengthDimension to draw dimension between face and vertex? Dear Kirill, please review latest patch in branch CR26035 |
|
Branch CR26035 has been updated forcibly by dbv. SHA-1: 11e95b68e900a2b11b70a5297034f88885000d65 |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26035 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 11e95b68e900a2b11b70a5297034f88885000d65 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_1.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_1.html bugs vis(004) bug26035_1: OK http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_2.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_2.html bugs vis(004) bug26035_2: OK http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_3.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_3.html bugs vis(004) bug26035_3: OK http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_4.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_4.html bugs vis(004) bug26035_4: OK http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_5.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_5.html bugs vis(004) bug26035_5: OK http://occt-tests/CR26035-master-occt-64/Debian60-64/bugs/vis/bug26035_6.html http://occt-tests/CR26035-master-occt-64/Windows-64-VC10/bugs/vis/bug26035_6.html bugs vis(004) bug26035_6: OK Testing on Linux: occt component : Total MEMORY difference: 93986008 / 94253387 [-0.28%] Total CPU difference: 58571.41999999937 / 56192.6999999997 [+4.23%] products component : Total MEMORY difference: 23688711 / 23689725 [-0.00%] Total CPU difference: 19417.829999999973 / 19042.799999999963 [+1.97%] Testing on Windows: occt component : Total MEMORY difference: 57126709 / 57127349 [-0.00%] Total CPU difference: 15876.455771499132 / 15976.514812898899 [-0.63%] products component : Total MEMORY difference: 15477003 / 15478724 [-0.01%] Total CPU difference: 6369.7704316 / 6217.388654799964 [+2.45%] There are no differences in images found by testdiff. |
|
Branch CR26035 has been deleted by inv. SHA-1: 11e95b68e900a2b11b70a5297034f88885000d65 |
occt: master 85a975f1 2015-04-09 08:03:41
Committer: bugmaster Details Diff |
0026035: Length dimension can't be built between two vertices in Draw Fixed drawing length dimension for two vertices in Draw Fixed exception when trying to draw length dimension for face-point or point-face Fixed drawing length dimension for edge-vertex/point and vertex/point-edge |
Affected Issues 0026035 |
|
mod - src/ViewerTest/ViewerTest_RelationCommands.cxx | Diff File | ||
add - tests/bugs/vis/bug26035_1 | Diff File | ||
add - tests/bugs/vis/bug26035_2 | Diff File | ||
add - tests/bugs/vis/bug26035_3 | Diff File | ||
add - tests/bugs/vis/bug26035_4 | Diff File | ||
add - tests/bugs/vis/bug26035_5 | Diff File | ||
add - tests/bugs/vis/bug26035_6 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-09 11:40 |
|
New Issue | |
2015-04-09 11:40 |
|
Assigned To | => dbv |
2015-04-09 11:42 | git | Note Added: 0039473 | |
2015-04-09 11:43 |
|
Status | new => assigned |
2015-04-09 11:44 |
|
Note Added: 0039474 | |
2015-04-09 11:44 |
|
Assigned To | dbv => abv |
2015-04-09 11:44 |
|
Status | assigned => resolved |
2015-04-09 11:44 |
|
Steps to Reproduce Updated | |
2015-04-09 18:47 | kgv | Note Added: 0039528 | |
2015-04-09 18:58 |
|
Assigned To | abv => dbv |
2015-04-09 18:58 |
|
Status | resolved => assigned |
2015-04-09 19:13 | git | Note Added: 0039531 | |
2015-04-09 19:15 |
|
Note Added: 0039532 | |
2015-04-09 19:15 |
|
Assigned To | dbv => kgv |
2015-04-09 19:15 |
|
Status | assigned => resolved |
2015-04-10 09:04 | kgv | Note Added: 0039545 | |
2015-04-10 09:04 | kgv | Assigned To | kgv => dbv |
2015-04-10 09:04 | kgv | Status | resolved => assigned |
2015-04-10 09:10 |
|
Note Added: 0039546 | |
2015-04-10 10:03 |
|
Target Version | => 6.9.0 |
2015-04-10 18:19 | git | Note Added: 0039609 | |
2015-04-10 18:22 |
|
Note Added: 0039610 | |
2015-04-10 18:22 |
|
Assigned To | dbv => kgv |
2015-04-10 18:22 |
|
Status | assigned => resolved |
2015-04-10 18:22 |
|
Steps to Reproduce Updated | |
2015-04-10 18:28 | git | Note Added: 0039611 | |
2015-04-13 13:52 | kgv | Note Added: 0039627 | |
2015-04-13 13:52 | kgv | Assigned To | kgv => bugmaster |
2015-04-13 13:52 | kgv | Status | resolved => reviewed |
2015-04-13 13:53 | kgv | Product Version | 6.9.0 => |
2015-04-13 14:39 |
|
Assigned To | bugmaster => mkv |
2015-04-14 18:29 |
|
Note Added: 0039707 | |
2015-04-14 18:30 |
|
Test case number | => bugs vis(004) bug26035_1, bug26035_2, bug26035_3, bug26035_4, bug26035_5, bug26035_6 |
2015-04-14 18:30 |
|
Assigned To | mkv => bugmaster |
2015-04-14 18:30 |
|
Status | reviewed => tested |
2015-04-17 15:40 | bugmaster | Changeset attached | => occt master 85a975f1 |
2015-04-17 15:40 | bugmaster | Status | tested => verified |
2015-04-17 15:40 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:35 | git | Note Added: 0041077 |